Fix submenu on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,26 @@ h1,h2,h3,h4,h5,h6 { font-family: 'Lato', sans-serif !important; font-weight: 700
 .dropdown-menu {
   top: 80%;
 }
+
+/* add submenu to hamburger */
+.navbar-nav li:hover > ul.dropdown-menu {
+    display: block;
+}
+.dropdown-submenu {
+    position:relative;
+}
+.dropdown-submenu>.dropdown-menu {
+    top:0;
+    left:100%;
+    margin-top:-6px;
+}
+
+
+
+
+
+
+
 @media only screen and (min-width: 768px) {
     /* make page dropdown parents into a link */
     .dropdown:hover>.dropdown-menu {
